--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="player_two_game_over">Computer Wins!</string>
     <string name="crash_toast_text">Ooooops! Computer crashed, but a report has been sent to my developer to help fix the issue!</string>
     <string name="game_header1_text"><![CDATA["<small>COMPUTER</small><b><big><big>YOU</big></big></b>"]]></string>
-		<string name="game_header_text"><![CDATA["<small>You: </small><b><big><big><font  color='#4317D5'>%1$s</font> </big></big> </b>  <small>Computer: </small><b> <big><big> <font color='#FD9B16'>%2$s</font></big></big></b>  <small>%3$s</small>"]]></string>
+		<string name="game_header_text"><![CDATA["<small>You: </small><b><big><big><font  color='#22C822'>%1$s</font> </big></big> </b>  <small>Computer: </small><b> <big><big> <font color='#FD9B16'>%2$s</font></big></big></b>  <small>%3$s</small>"]]></string>
 		<string name="play_again_option"><![CDATA[Do you want to play again?]]></string>
 </resources>
